Revise README for BiblioTech project details
Updated project name and enhanced README content with detailed features, system architecture, and installation instructions.